--- a/static/browser.html
+++ b/static/browser.html
@@ -14,16 +14,16 @@
   <link href="chrome-tabs/css/chrome-tabs-dark-theme.css" rel="stylesheet" />
   <link href="material-symbols-outlined.css" rel="stylesheet" />
   <!-- ******** JS ******** -->
-  <script src="/epoxy/index.js"></script>
-  <script src="/bare-mux/bare.cjs"></script>
-  <script src="/libs/draggabilly.min.js"></script>
-  <script src="/libs/filer.min.js"></script>
-  <script src="/libs/jszip.min.js"></script>
-  <script src="/libs/createhash-browser.min.js"></script>
-  <script src="/libs/pbf.min.js"></script>
-  <script src="/chrome-tabs/js/chrome-tabs.js"></script>
-  <script src="/uv/uv.bundle.js"></script>
-  <script src="/uv/uv.config.js"></script>
+  <script src="libcurl/index.js"></script>
+  <script src="bare-mux/bare.cjs"></script>
+  <script src="libs/draggabilly.min.js"></script>
+  <script src="libs/filer.min.js"></script>
+  <script src="libs/jszip.min.js"></script>
+  <script src="libs/createhash-browser.min.js"></script>
+  <script src="libs/pbf.min.js"></script>
+  <script src="chrome-tabs/js/chrome-tabs.js"></script>
+  <script src="uv/uv.bundle.js"></script>
+  <script src="uv/uv.config.js"></script>
   <script src="proxyHelpers.js"></script>
   <script src="bookmarks.js"></script>
   <script src="elementmap.js"></script>
